<resources>
    <string name="app_name">AllWees</string>
    <string name="cashus">US$0.00</string>
    <string name="reward">100 Points</string>
    <string name="empty_data">data is empty</string>
    <string name="welcome_title">Welcome to ShallChinc</string>
    <string name="str_hint_email">Email</string>
    <string name="str_hint_password">Password</string>
    <string name="str_hint_firstn">First Name</string>
    <string name="str_permission_miss">Permission is not granted by user.</string>
    <string name="str_hint_lastn">Last Name</string>
    <string name="str_forget_p">Forget Password?</string>
    <string name="rc_authorities_fileprovider">.FileProvider</string>
    <string name="app_please_up_method">Please select upload method</string>
    <string name="app_please_choice_type">Please select reason for return</string>
    <string name="me_unlogin_hint">Sign up/Log in</string>
    <string name="hint_province_empty">Please fill in province</string>
    <string name="home_classify_p_gd">good Quatity</string>
    <string name="home_classify_p_dr">Days Return 30</string>
    <string name="home_classify_p_fs">Free Shipping</string>
    <string name="home_classify_p_new_user_free_gifts">New User Free Gift</string>
    <string name="home_classify_p_jfy">Just for you</string>
    <string name="home_classify_p_fs_title">Flash Sale</string>
    <string name="home_classify_flash_flash">Flash</string>
    <string name="home_classify_sale_flash">Sale</string>
    <string name="flash_sale_title">Flash Sale</string>
    <string name="flash_sale_state">On sale</string>
    <string name="flash_sale_comming">Comming</string>
    <string name="flash_sale_soon">soon</string>
    <string name="deliver_double_title">BUY 1 GET 1 FREE</string>
    <string name="category_title">Category</string>
    <string name="cart_title">Cart</string>
    <string name="cart_more_to"> more to enjoy free shipping</string>
    <string name="cart_empty_hint">Your cart is empty</string>
    <string name="cart_continue_shipping">Continue Shopping</string>
    <string name="cart_might_you_like">You might like…</string>
    <string name="cart_enjoy_shipping">more to enjoy free shipping</string>
    <string name="cart_shipping">Shipping</string>
    <string name="cart_shipto">ship to</string>
    <string name="cart_item_in_cart">Items In Cart</string>
    <string name="cart_order_summary">Order Summary</string>
    <string name="cart_hint_enter_promo_code">Enter Promo Code</string>
    <string name="cart_view_avaliable_c">View available coupons</string>
    <string name="cart_view_free_one_hint">Qualified for buy 1 get 1 extra free</string>
    <string name="cart_view_no_csah">Opps,this code is invalid</string>
    <string name="cart_item_total">Item Total</string>
    <string name="cart_item_deduction_price">Deduction</string>
    <string name="cart_ot">Order Total</string>
    <string name="cart_scbu">AllWees Cash Balance US</string>
    <string name="cart_dfrar">30 Days Free Return and Refund</string>
    <string name="cart_checkout">Check out</string>
    <string name="cart_item_shipping">Shipping:</string>
    <string name="cart_pcr">Promo Code:</string>
    <string name="cart_hint_coupon_empty">Coupon code cannot be empty</string>
    <string name="str_resend">Resend</string>
    <string name="wishlist_title">Wishlist</string>
    <string name="wishlist_empty_hint">to save your favorite items,favorite</string>
    <string name="more_goods">More Goods</string>
    <string name="me_myOrder">My order</string>
    <string name="me_view_all">View all</string>
    <string name="me_sc">AllWees</string>
    <string name="me_rewards">Rewards</string>
    <string name="me_dlb">Daily Login Bouns</string>
    <string name="me_points">Points</string>
    <string-array name="reward_items">
        <item>Dashboard</item>
        <item>Redeem</item>
        <item>infomation</item>
    </string-array>
    <string-array name="reward_d_items">
        <item>Available</item>
        <item>Used</item>
        <item>History</item>
    </string-array>
    <string name="free_gift_res_use">Used</string>
    <string name="free_gift_res_use_in">Used in</string>
    <string name="free_gift_res_expire">Expired</string>
    <string name="free_gift_hint_choose">Please choose a gift</string>
    <string name="reward_res_point">Points</string>
    <string name="setting_title">Settings</string>
    <string name="str_zero">0</string>
    <string name="goods_detail_title">Details</string>
    <string name="goods_detail_ea">Estimated Arrival:</string>
    <string name="goods_detail_drar">30 Days Return and Refund</string>
    <string name="goods_detail_cas">Colors and Sizes</string>
    <string name="goods_detail_des">Description</string>
    <string name="goods_detaildo">Delivery Options</string>
    <string name="goods_seyml">Something Else You Might Like</string>
    <string name="goods_buy">Buy</string>
    <string name="goods_atc">Add to Cart</string>
    <string name="goods_standard_ship">Standard Shipping</string>
    <string name="goods_detail_es">Estimated Shipping:</string>
    <string name="goods_detail_selected">Selected </string>
    <string name="goods_detail_size">Size</string>
    <string name="goods_detail_color">Color</string>
    <string name="goods_detail_qty">Quantity</string>
    <string name="goods_detail_add_to_cart">Item has been added to cart</string>
    <string name="goods_detail_shop_sc">Shop AllWees Confidence</string>
    <string name="goods_detail_we_p">we provide guarantees to all AllWees purchases</string>
    <string name="goods_detail_dr">30-Day Returns</string>
    <string name="goods_detail_day">days</string>
    <string name="goods_detail_all_item_c">All items can be returned for a refund within \n 30 days of delivery</string>
    <string name="goods_detail_quick_sp">QUICK,Simple Process</string>
    <string name="goods_detail_well_guide">Well guide you through a few easy steps to return your item.</string>
    <string name="goods_detail_allwees_cs">AllWees Customes Support</string>
    <string name="goods_detail_our_cus">Our customer service team is always here,if\n you need help.</string>
    <string name="goods_detail_see_tf">See the full Return Policy for complete details</string>
    <string name="goods_detail_sorry_hint">I am sorry we can not find the goods</string>
    <string name="goods_detail_skip">Return Policy</string>
    <string name="goods_detail_share_tilte">Look what I found on Allwees for a nice price!</string>
    <string name="free_gift_title">Free Gifts For New User</string>
    <string name="free_gift_save_w">Save With The New User Coupon</string>
    <string name="str_off">OFF</string>
    <string name="str_get">GET!</string>
    <string name="str_received">Received</string>
    <string name="str_valid_in">Valid in</string>
    <string name="str_used">Used</string>
    <string name="free_gift_for_new">Free Gifts For New User</string>
    <string name="free_recommend">Recommendation</string>
    <string name="free_gift_please_choose">Please choose a gift</string>
    <string name="forget_p_title">Forget Password</string>
    <string name="forget_p_hint_email_nil">email is null</string>
    <string name="forget_p_send_email_success">Send email Success</string>
    <string name="account_setting">Account Settings</string>
    <string name="account_update_portrait">Update Profile</string>
    <string name="account_change_ps">Change Password</string>
    <string name="account_change_email">Change Eamil</string>
    <string-array name="free_bottom_segment">
        <item>Below $5</item>
        <item>Influencer is</item>
    </string-array>
    <string name="pm_title">Payment</string>
    <string name="pm_cofirm_pay">confirm Pay</string>
    <string name="pm_prefix_tag_total">Total:</string>
    <string name="pay_unit">AED</string>
    <string name="pm_prefix_tag_product_total">Product Total</string>
    <string name="pm_prefix_tag_shipping">Shipping</string>
    <string name="pm_prefix_tag_Discount">Discount</string>
    <string name="pm_credit_card_title">Credit or Debit Card</string>
    <string name="pm_credit_paypal_title">Paypal</string>
    <string name="pm_credit_send_title">Cash On Delivery</string>
    <string name="pm_use_paypal_des">If you do not have a Paypal account,you can also pay via Paypal with your credit card or bank debit card.(including local cards)</string>
    <string name="request_type">request type</string>
    <string name="receiving_type">receiving type</string>
    <string name="pm_cod_prefix">Shopping </string>
    <string name="pm_cod_suffix"> more to use COD</string>
    <string name="ps_hint_1">Your order is on its way and the conformation email has been sent to:</string>
    <string name="search_goods_hint_search">Search</string>
    <string name="search_recent_kinds">Recent Searches</string>
    <string name="search_trending_group">Trending Searches</string>
    <string name="pm_add_card_title">Add Card Information</string>
    <string name="pm_add_card_cn">Card Number</string>
    <string name="pm_add_card_ed">Expire Date</string>
    <string name="str_cancel">cancel</string>
    <string name="select_q">Select Quantity</string>
    <string name="fp_hint_emila">Enter your e-mail address and well send a reset link\nfor your password.</string>
    <string name="fp_enter_email">Enter e-mail address</string>
    <string name="fp_send_rl">send Reset Link</string>
    <string name="str_sure">sure</string>
    <string name="reward_hint_1">Earn points each time you complete carious activities through the app.</string>
    <string name="reward_hint_2">Redeem your points for coupons and get discounts on your purchase.</string>
    <string name="reward_hint_3">How do I earn points?</string>
    <string name="upper_point">POINTS</string>
    <string name="upper_action">ACTION</string>
    <string name="reward_hint_4">Make a purchase</string>
    <string name="reward_hint_5">Review a purchase</string>
    <string name="reward_hint_6">Upload a photo with your review</string>
    <string name="reward_hint_7">How do I use my points?</string>
    <string name="reward_hint_8">Redeem your points for coupons and get extra discounts. Tap on the Redeem tab to get started.</string>
    <string name="reward_hint_9">how do I use my coupons?</string>
    <string name="reward_hint_10">Apply your coupon by copying the code associated with it and apply it at checkout. Coupons are ono-stackable and the highest valued coupon is applied first.</string>
    <string name="reward_hint_11">Do my points expire?</string>
    <string name="reward_hint_16">No, your points are always available for you to redeem.</string>
    <string name="sc_info_1">You can use the available balance to buy anything on AllWees.</string>
    <string name="sc_info_2">Can money added to AllWees Cash be refunded or taken out?</string>
    <string name="sc_info_3">No, once money is added to AllWees Cash, it can not be refunded or taken out.</string>
    <string name="sc_info_4">What can I buy with AllWees Cash?</string>
    <string name="sc_info_5">AllWees Cash is applicable towards any item on AllWees.</string>
    <string name="sc_info_6">Do funds expire?</string>
    <string name="sc_info_7">AllWees Cash never expires (unless otherwise noted).</string>
    <string name="sc_info_8">Where do you apply AllWees Cash?</string>
    <string name="sc_info_9">Funds are automatically applied at checkout.</string>
    <string name="sc_info_10">What if I do not have enough AllWees Cash when checking out?</string>
    <string name="sc_info_11">We will use the remaining balabce in your AllWees Cash account and default the rest of the payment to your preferred payment method.</string>
    <string name="sc_info_12">Are items bought with AllWees Cash refundable?</string>
    <string name="sc_info_13">Yes, funds will be refunded back to your AllWees Cash available balance.</string>
</resources>