<?xml version="1.0" encoding="utf-8"?>
<com.qmuiteam.qmui.widget.QMUIWindowInsetLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/app_background_default">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:paddingStart="@dimen/item_pspace15"
            android:paddingEnd="@dimen/item_pspace15"
            android:paddingTop="@dimen/item_pspace15"
            android:paddingBottom="@dimen/item_pspace100"
            >
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/sc_info_1"
                android:textSize="@dimen/app_text_word13"
                android:textColor="@color/color_333"
                android:ellipsize="end"
                android:maxLines="2"
                >
            </TextView>
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/sc_info_2"
                android:textSize="@dimen/app_text_word14"
                android:textColor="@color/color_000000"
                android:ellipsize="end"
                android:maxLines="2"
                android:layout_marginTop="@dimen/item_pspace20"
                >
            </TextView>
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/sc_info_3"
                android:textSize="@dimen/app_text_word13"
                android:textColor="@color/color_333"
                android:ellipsize="end"
                android:maxLines="2"
                android:layout_marginTop="@dimen/item_pspace20"
                >
            </TextView>
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/sc_info_4"
                android:textSize="@dimen/app_text_word14"
                android:textColor="@color/color_000000"
                android:ellipsize="end"
                android:maxLines="2"
                android:layout_marginTop="@dimen/item_pspace20"
                >
            </TextView>
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/sc_info_5"
                android:textSize="@dimen/app_text_word13"
                android:textColor="@color/color_333"
                android:ellipsize="end"
                android:maxLines="2"
                android:layout_marginTop="@dimen/item_pspace20"
                >
            </TextView>
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/sc_info_6"
                android:textSize="@dimen/app_text_word14"
                android:textColor="@color/color_000000"
                android:ellipsize="end"
                android:maxLines="2"
                android:layout_marginTop="@dimen/item_pspace20"
                >
            </TextView>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/sc_info_7"
                android:textSize="@dimen/app_text_word13"
                android:textColor="@color/color_333"
                android:ellipsize="end"
                android:maxLines="2"
                android:layout_marginTop="@dimen/item_pspace20"
                >
            </TextView>
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/sc_info_8"
                android:textSize="@dimen/app_text_word14"
                android:textColor="@color/color_000000"
                android:ellipsize="end"
                android:maxLines="2"
                android:layout_marginTop="@dimen/item_pspace20"
                >
            </TextView>
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/sc_info_9"
                android:textSize="@dimen/app_text_word13"
                android:textColor="@color/color_333"
                android:ellipsize="end"
                android:maxLines="2"
                android:layout_marginTop="@dimen/item_pspace20"
                >
            </TextView>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/sc_info_10"
                android:textSize="@dimen/app_text_word14"
                android:textColor="@color/color_000000"
                android:ellipsize="end"
                android:maxLines="2"
                android:layout_marginTop="@dimen/item_pspace20"
                >
            </TextView>
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/sc_info_11"
                android:textSize="@dimen/app_text_word13"
                android:textColor="@color/color_333"
                android:ellipsize="end"
                android:maxLines="3"
                android:layout_marginTop="@dimen/item_pspace20"
                >
            </TextView>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/sc_info_12"
                android:textSize="@dimen/app_text_word14"
                android:textColor="@color/color_000000"
                android:ellipsize="end"
                android:maxLines="2"
                android:layout_marginTop="@dimen/item_pspace20"
                >
            </TextView>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/sc_info_13"
                android:textSize="@dimen/app_text_word13"
                android:textColor="@color/color_333"
                android:ellipsize="end"
                android:maxLines="2"
                android:layout_marginTop="@dimen/item_pspace20"
                >
            </TextView>
        </LinearLayout>

</com.qmuiteam.qmui.widget.QMUIWindowInsetLayout>