<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@color/app_background_default"
    android:scrollbars="none">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        >
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:paddingStart="@dimen/item_pspace15"
            android:paddingEnd="@dimen/item_pspace15"
            android:paddingBottom="@dimen/item_pspace10"
            >
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textSize="@dimen/item_pspace13"
                android:text="@string/reward_hint_1"
                android:layout_marginTop="@dimen/item_pspace10"
                >
            </TextView>
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textSize="@dimen/item_pspace13"
                android:text="@string/reward_hint_2"
                android:layout_marginTop="@dimen/item_pspace15"
                >
            </TextView>
        </LinearLayout>
        <View
            android:layout_width="match_parent"
            android:layout_height="@dimen/item_pspace5"
            android:background="@color/color_f3f3"
            >
        </View>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="@dimen/item_pspace15"
            >
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textSize="@dimen/item_pspace13"
                android:textStyle="bold"
                android:text="@string/reward_hint_3"
                >
            </TextView>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:paddingTop="@dimen/item_pspace10"
                android:paddingBottom="@dimen/item_pspace10"
                >
                <TextView
                    android:layout_weight="6"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/upper_point"
                    >
                </TextView>
                <TextView
                    android:layout_weight="3"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/upper_action"
                    >
                </TextView>
            </LinearLayout>
            <View
                android:layout_width="match_parent"
                android:layout_height="@dimen/item_pspace1"
                android:background="@color/app_line_color"
                >
            </View>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:paddingTop="@dimen/item_pspace10"
                android:paddingBottom="@dimen/item_pspace10"
                >
                <TextView
                    android:layout_weight="6"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="100"
                    >
                </TextView>
                <TextView
                    android:layout_weight="3"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/reward_hint_4"
                    >
                </TextView>
            </LinearLayout>
            <View
                android:layout_width="match_parent"
                android:layout_height="@dimen/item_pspace1"
                android:background="@color/app_line_color"
                >
            </View>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:paddingTop="@dimen/item_pspace10"
                android:paddingBottom="@dimen/item_pspace10"
                >
                <TextView
                    android:layout_weight="6"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="10"
                    >
                </TextView>
                <TextView
                    android:layout_weight="3"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/reward_hint_5"
                    >
                </TextView>
            </LinearLayout>
            <View
                android:layout_width="match_parent"
                android:layout_height="@dimen/item_pspace1"
                android:background="@color/app_line_color"
                >
            </View>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:paddingTop="@dimen/item_pspace10"
                android:paddingBottom="@dimen/item_pspace10"
                >
                <TextView
                    android:layout_weight="6"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="10"
                    >
                </TextView>
                <TextView
                    android:layout_weight="3"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/reward_hint_6"
                    >
                </TextView>
            </LinearLayout>
            <View
                android:layout_width="match_parent"
                android:layout_height="@dimen/item_pspace1"
                android:background="@color/app_line_color"
                >
            </View>
        </LinearLayout>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="@dimen/item_pspace13"
            android:text="@string/reward_hint_7"
            android:padding="@dimen/item_pspace15"
            android:textStyle="bold"
            android:layout_marginTop="@dimen/item_pspace10"
            >
        </TextView>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="@dimen/item_pspace13"
            android:text="@string/reward_hint_8"
            android:paddingStart="@dimen/item_pspace15"
            android:paddingEnd="@dimen/item_pspace15"
            >
        </TextView>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="@dimen/item_pspace13"
            android:text="@string/reward_hint_9"
            android:textStyle="bold"
            android:paddingStart="@dimen/item_pspace15"
            android:paddingEnd="@dimen/item_pspace15"
            android:paddingBottom="@dimen/item_pspace15"
            >
        </TextView>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="@dimen/item_pspace13"
            android:text="@string/reward_hint_10"
            android:paddingStart="@dimen/item_pspace15"
            android:paddingEnd="@dimen/item_pspace15"
            android:paddingBottom="@dimen/item_pspace15"
            >
        </TextView>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="@dimen/item_pspace13"
            android:text="@string/reward_hint_11"
            android:textStyle="bold"
            android:paddingStart="@dimen/item_pspace15"
            android:paddingEnd="@dimen/item_pspace15"
            android:paddingBottom="@dimen/item_pspace15"
            >
        </TextView>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="@dimen/item_pspace13"
            android:text="@string/reward_hint_16"
            android:paddingStart="@dimen/item_pspace15"
            android:paddingEnd="@dimen/item_pspace15"
            android:paddingBottom="@dimen/item_pspace15"
            >
        </TextView>
    </LinearLayout>
</ScrollView>