<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@color/app_background_default"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    >

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="@dimen/item_pspace40"
        android:paddingStart="@dimen/item_pspace10"
        android:paddingEnd="@dimen/item_pspace10"
        >
        <ImageView
            android:id="@+id/iv_back"
            android:layout_width="20dp"
            android:layout_height="20dp"
            android:layout_centerVertical="true"
            android:src="@mipmap/ic_black_back"
            >
        </ImageView>
        <TextView
            android:id="@+id/tv_topTitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/forget_p_title"
            android:textSize="@dimen/app_text_16sp"
            android:layout_centerInParent="true"
            >
        </TextView>
    </RelativeLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="@dimen/item_pspace0.5"
        android:background="@color/color_f3f3">
    </View>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:background="@color/white"
        android:paddingStart="@dimen/item_pspace20"
        android:paddingEnd="@dimen/item_pspace20"
        android:paddingTop="@dimen/item_pspace30"
        >
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="@dimen/app_text_word12"
            android:textColor="@color/color_999"
            android:text="@string/fp_hint_emila"
            >
        </TextView>

        <com.hb.basemodel.view.SuperEditView
            android:id="@+id/et_fetchPassword"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="@dimen/app_text_14sp"
            android:textColorHint="@color/color_ccc"
            android:maxLength="20"
            android:background="@drawable/bg_shape_gray_forget_password"
            android:layout_marginTop="@dimen/item_pspace30"
            app:sEditHint="@string/fp_enter_email"
            >
        </com.hb.basemodel.view.SuperEditView>

        <TextView
            android:id="@+id/tv_retriveP"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/fp_send_rl"
            android:textColor="@color/white"
            android:textSize="@dimen/app_text_word13"
            android:layout_marginTop="@dimen/item_pspace20"
            android:background="@drawable/select_send_email"
            android:gravity="center"
            >
        </TextView>
    </LinearLayout>

</LinearLayout>